# rvariety

./: .gitignore  Cargo.toml  README.md
.github/workflows/: cd.yml
benches/: bench_main.rs
benches/benchmarks/: compare_functions.rs  mod.rs
src/: download.rs  error.rs  lib.rs
src/index/: alphacoders.rs  bing.rs  mod.rs  nasa.rs  wallhaven.rs
src/something/: a.rs  b.rs  mod.rs
