[package]
name = "rust-example"
version = "0.1.0"
description = "A rust project template"
authors = ["zhangchunzhong <zczxyz@126.com>"]
edition = "2018"
include = [
    "benches/*.rs",
    "src/**/*.rs",
    "Cargo.toml"
]

[dependencies]
thiserror = "1.0"

[dev-dependencies]
criterion = "0.3"
pretty_assertions = "0.6"

[[bench]]
name = "bench_main"
harness = false
