[package]
name = "rvariety"
version = "0.1.0"
description = "variety in rust"
authors = ["zhangchunzhong <zczxyz@126.com>"]
edition = "2018"
include = [
    "benches/*.rs",
    "src/**/*.rs",
    "Cargo.toml"
]

[dependencies]
thiserror = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
env_logger = "0.8.3"
select = "0.5.0"
regex = "1.4.3"

[dev-dependencies]
criterion = "0.3"
pretty_assertions = "0.6"

[[bench]]
name = "bench_main"
harness = false
