[package]
name = "rvariety"
version = "0.1.0"
description = "variety in rust"
authors = ["zhangchunzhong <zczxyz@126.com>"]
edition = "2018"
include = [
    "benches/*.rs",
    "src/**/*.rs",
    "Cargo.toml"
]

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json", "cookies"] }
env_logger = "0.8.3"
select = "0.5.0"
regex = "1.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rss = "1.10.0"
futures = { version = "0.3.*" }
tokio = {version = "0.2.*", features = ["full"] }

[dev-dependencies]
criterion = "0.3"
pretty_assertions = "0.7"

[[bench]]
name = "bench_main"
harness = false
